--- a/europe.html
+++ b/europe.html
@@ -49,7 +49,7 @@
       </header>
       <!-- banner -->
       <div id="banner" class="sub_banner home_page_banner">
-         <img src="./assets/images/hotel1.webp" alt="sub_banner_img">
+         <img src="./assets/images/home_bg_img.webp" alt="sub_banner_img">
          <div class="container">
             <div class="sub_banner_content text-center">
                <h1 class="mb-4">Euroopassa</h1>
@@ -82,7 +82,7 @@
                </div>
                <div class="col-lg-6">
                   <div class="right_side_ab">
-                     <img src="./assets/images/iceland_bg3.jpg" alt="" class="img-fluid">
+                     <img src="./assets/images/europe_bg.jpg" alt="" class="img-fluid">
                   </div>
                </div>
             </div>
@@ -103,11 +103,11 @@
                      <h2 class="text-center mb-4">Monte Carlon kasino</h2>
                      <h6><b>Sijainti:</b> Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
-                        <a href="https://www.scandinave.com/whistler" target="_blank">
-                        <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
+                        <a href="https://www.montecarlosbm.com/en/casino-monaco/casino-monte-carlo" target="_blank">
+                        <img src="./assets/images/monte-carlo.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://www.scandinave.com/whistler" class="common_btn"  target="_blank">
+                           <a href="https://www.montecarlosbm.com/en/casino-monaco/casino-monte-carlo" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -130,11 +130,11 @@
                      <h2 class="text-center mb-4">Casino Café de Paris</h2>
                      <h6><b>Sijainti:</b>Sijainti: Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://www.montecarlosbm.com/en/casino-monaco/casino-cafe-de-paris" target="_blank">
+                        <img src="./assets/images/casino_paris.webp" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://www.montecarlosbm.com/en/casino-monaco/casino-cafe-de-paris" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -155,11 +155,11 @@
                      <h2 class="text-center mb-4">Monte Carlo Bayn kasino</h2>
                      <h6><b>Sijainti: </b>Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://www.montecarlosbm.com/en/hotel-monaco/monte-carlo-bay-hotel-resort" target="_blank">
+                        <img src="./assets/images/bayn_kasino.png" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://www.montecarlosbm.com/en/hotel-monaco/monte-carlo-bay-hotel-resort" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -194,11 +194,11 @@
                      <h2 class="text-center mb-4">Hippodromen kasino</h2>
                      <h6><b>Paikka: </b>Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
-                        <a href="https://www.scandinave.com/whistler" target="_blank">
-                        <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
+                        <a href="https://www.hippodromecasino.com/" target="_blank">
+                        <img src="./assets/images/hippodromen.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://www.scandinave.com/whistler" class="common_btn"  target="_blank">
+                           <a href="https://www.hippodromecasino.com/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -220,11 +220,11 @@
                      <h2 class="text-center mb-4">Grosvenor Casino Victoria</h2>
                      <h6><b>Paikka: </b>Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://marble-arch.london/stay-and-meet/grosvenor-victoria-casino/" target="_blank">
+                        <img src="./assets/images/victoria_casino.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://marble-arch.london/stay-and-meet/grosvenor-victoria-casino/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -244,11 +244,11 @@
                      <h2 class="text-center mb-4">Empire Casino</h2>
                      <h6><b>Paikka:</b> Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://www.thecasinolsq.com/" target="_blank">
+                        <img src="./assets/images/empire_casino.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://www.thecasinolsq.com/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -283,11 +283,11 @@
                      <h2 class="text-center mb-4">Kasino Atrium Hilton</h2>
                      <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
-                        <a href="https://www.scandinave.com/whistler" target="_blank">
-                        <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
+                        <a href="https://www.tripadvisor.in/Attraction_Review-g274707-d12224024-Reviews-Casino_Atrium_Hilton-Prague_Bohemia.html" target="_blank">
+                        <img src="./assets/images/kasino_atrium.jpeg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://www.scandinave.com/whistler" class="common_btn"  target="_blank">
+                           <a href="https://www.tripadvisor.in/Attraction_Review-g274707-d12224024-Reviews-Casino_Atrium_Hilton-Prague_Bohemia.html" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -307,11 +307,11 @@
                      <h2 class="text-center mb-4">Kasinon lähettiläs</h2>
                      <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://www.getyourguide.com/fi-fi/praha-l10/patikointi-tc71/" target="_blank">
+                        <img src="./assets/images/kasinon_lahettilas.avif" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://www.getyourguide.com/fi-fi/praha-l10/patikointi-tc71/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -331,11 +331,11 @@
                      <h2 class="text-center mb-4">Kasino Banco</h2>
                      <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://www.bancocasino.sk/" target="_blank">
+                        <img src="./assets/images/casino_banco.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://www.bancocasino.sk/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
