--- a/terms_and_conditions.html
+++ b/terms_and_conditions.html
@@ -28,7 +28,7 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                <div class="nav-title">
-                  <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
+                  <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
                      class="img-fluid"></a>
                </div>
             </div>
@@ -258,8 +258,7 @@
                <div class="row align-items-center">
                   <div class="col-12 col-xl-3">
                      <div class="footer_left">
-                        <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
-                           class="img-fluid"></a>
+                        <a href="">   <img src="./assets/images/logo1.png" alt="" class="img-fluid"></a>
                      </div>
                   </div>
                   <div class="col-12 col-xl-9">
