--- a/america.html
+++ b/america.html
@@ -28,7 +28,7 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                <div class="nav-title">
-                  <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
+                  <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
                      class="img-fluid"></a>
                </div>
             </div>
@@ -49,7 +49,7 @@
       </header>
       <!-- banner -->
       <div id="banner" class="sub_banner home_page_banner">
-         <img src="./assets/images/hotel1.webp" alt="sub_banner_img">
+         <img src="./assets/images/america_bg.avif" alt="sub_banner_img">
          <div class="container">
             <div class="sub_banner_content text-center">
                <h1 class="mb-4">Amerikka</h1>
@@ -78,14 +78,14 @@
                </div>
                <div class="col-lg-6">
                   <div class="right_side_ab">
-                     <img src="./assets/images/iceland_bg3.jpg" alt="" class="img-fluid">
+                     <img src="./assets/images/ameria_main_hotel.jpg" alt="" class="img-fluid">
                   </div>
                </div>
             </div>
          </div>
       </div>
       <!-- luxury_hotels -->
-      <div class="luxury_hotels section pb-0">
+      <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
                <div class="col text-center mb-5">
@@ -99,11 +99,11 @@
                      <h2 class="text-center mb-4">The Venetian</h2>
                      <h6><b>Sijainti: </b>Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
-                        <a href="https://www.scandinave.com/whistler" target="_blank">
-                        <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
+                        <a href="https://www.venetianlasvegas.com/" target="_blank">
+                        <img src="./assets/images/vinetian_lasvegas.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://www.scandinave.com/whistler" class="common_btn"  target="_blank">
+                           <a href="https://www.venetianlasvegas.com/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -125,11 +125,11 @@
                      <h2 class="text-center mb-4">Bellagio</h2>
                      <h6><b>Sijainti:</b> Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://bellagio.mgmresorts.com/en.html" target="_blank">
+                        <img src="./assets/images/bellagio_lasvegas.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://bellagio.mgmresorts.com/en.html" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -151,11 +151,11 @@
                      <h2 class="text-center mb-4">Wynn</h2>
                      <h6><b>Sijainti:</b>Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://www.wynnlasvegas.com/" target="_blank">
+                        <img src="./assets/images/wynnlas_vegas.webp" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://www.wynnlasvegas.com/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -177,7 +177,7 @@
             </div>
          </div>
       </div>
-      <div class="luxury_hotels section pb-0">
+      <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
                <div class="col text-center mb-5">
@@ -191,11 +191,11 @@
                      <h2 class="text-center mb-4">Borgata Hotel Casino & Spa</h2>
                      <h6><b>Sijainti:</b> Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
-                        <a href="https://www.scandinave.com/whistler" target="_blank">
-                        <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
+                        <a href="https://borgata.mgmresorts.com/en.html" target="_blank">
+                        <img src="./assets/images/borgata_hotel.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://www.scandinave.com/whistler" class="common_btn"  target="_blank">
+                           <a href="https://borgata.mgmresorts.com/en.html" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -216,11 +216,11 @@
                      <h2 class="text-center mb-4">Caesars</h2>
                      <h6><b>Sijainti: </b>Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://www.caesars.com/" target="_blank">
+                        <img src="./assets/images/caesars.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://www.caesars.com/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -242,11 +242,11 @@
                      <h2 class="text-center mb-4">Hard Rock Hotel & Casino</h2>
                      <h6><b>Sijainti: </b>Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://hotel.hardrock.com/" target="_blank">
+                        <img src="./assets/images/hard_rock_hotel.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://hotel.hardrock.com/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -269,7 +269,7 @@
             </div>
          </div>
       </div>
-      <div class="luxury_hotels section pb-0">
+      <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
                <div class="col text-center mb-5">
@@ -283,11 +283,11 @@
                      <h2 class="text-center mb-4">Dubai Palacen kasino</h2>
                      <h6><b>Sijainti: </b>Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
-                        <a href="https://www.scandinave.com/whistler" target="_blank">
-                        <img src="./assets/images/lh1.jpg" alt="" class="img-fluid">
+                        <a href="https://www.yelp.com/biz/dubai-palace-casino-canc%C3%BAn" target="_blank">
+                        <img src="./assets/images/dubai_palace.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://www.scandinave.com/whistler" class="common_btn"  target="_blank">
+                           <a href="https://www.yelp.com/biz/dubai-palace-casino-canc%C3%BAn" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -308,11 +308,11 @@
                      <h2 class="text-center mb-4">PlayCity kasino</h2>
                      <h6><b></b>Sijainti: Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://foursquare.com/v/play-city-cancun/4dc5951f45dd26455274ad4e" target="_blank">
+                        <img src="./assets/images/playcitylkasino.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://foursquare.com/v/play-city-cancun/4dc5951f45dd26455274ad4e" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -333,11 +333,11 @@
                      <h2 class="text-center mb-4">Casino Palace Cancun</h2>
                      <h6><b>Sijainti: </b>Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
-                        <a href="https://notman.org/" target="_blank">
-                        <img src="./assets/images/lh2.jpg" alt="" class="img-fluid">
+                        <a href="https://www.dubaipalace.mx/" target="_blank">
+                        <img src="./assets/images/casino_2_palace.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
-                           <a href="https://notman.org/" class="common_btn"  target="_blank">
+                           <a href="https://www.dubaipalace.mx/" class="common_btn"  target="_blank">
                            Lue lisää</a>
                         </div>
                         <div class="content_hotel_card">
@@ -367,8 +367,7 @@
                <div class="row align-items-center">
                   <div class="col-12 col-xl-3">
                      <div class="footer_left">
-                        <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
-                           class="img-fluid"></a>
+                     <a href="">   <img src="./assets/images/logo1.png" alt="" class="img-fluid"></a>
                      </div>
                   </div>
                   <div class="col-12 col-xl-9">
