--- a/asia.html
+++ b/asia.html
@@ -32,8 +32,8 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                 <div class="nav-title">
-                    <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
-                            class="img-fluid"></a>
+                    <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
+                        class="img-fluid"></a>
                 </div>
             </div>
             <div class="nav-btn">
@@ -98,7 +98,7 @@
  
     
  
-         <div class="luxury_hotels section pb-0">
+         <div class="luxury_hotels section ">
              <div class="container">
                  <div class="row">
                      <div class="col text-center mb-5">
@@ -197,7 +197,7 @@
 
 
 
-<div class="luxury_hotels section pb-0">
+<div class="luxury_hotels section">
     <div class="container">
         <div class="row">
             <div class="col text-center mb-5">
@@ -295,7 +295,7 @@
 </div>
 
 
-<div class="luxury_hotels section pb-0">
+<div class="luxury_hotels section">
     <div class="container">
         <div class="row">
             <div class="col text-center mb-5">
@@ -462,8 +462,7 @@
                 <div class="row align-items-center">
                     <div class="col-12 col-xl-3">
                         <div class="footer_left">
-                            <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
-                                    class="img-fluid"></a>
+                            <a href="">   <img src="./assets/images/logo1.png" alt="" class="img-fluid"></a>
                         </div>
                     </div>
                     <div class="col-12 col-xl-9">
