--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                <div class="nav-title">
-                  <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
-                     class="img-fluid"></a>
+                  <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
+                     class="img-fluid"></a>>
                </div>
             </div>
             <div class="nav-btn">
@@ -97,8 +97,7 @@
                <div class="row align-items-center">
                   <div class="col-12 col-xl-3">
                      <div class="footer_left">
-                        <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
-                           class="img-fluid"></a>
+                        <a href="">   <img src="./assets/images/logo1.png" alt="" class="img-fluid"></a>
                      </div>
                   </div>
                   <div class="col-12 col-xl-9">
