--- a/europe.html
+++ b/europe.html
@@ -28,7 +28,7 @@
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
                <div class="nav-title">
-                  <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
+                  <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
                      class="img-fluid"></a>
                </div>
             </div>
@@ -89,7 +89,7 @@
          </div>
       </div>
       <!-- luxury_hotels -->
-      <div class="luxury_hotels section pb-0">
+      <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
                <div class="col text-center mb-5">
@@ -180,7 +180,7 @@
             </div>
          </div>
       </div>
-      <div class="luxury_hotels section pb-0">
+      <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
                <div class="col text-center mb-5">
@@ -269,7 +269,7 @@
             </div>
          </div>
       </div>
-      <div class="luxury_hotels section pb-0">
+      <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
                <div class="col text-center mb-5">
@@ -424,8 +424,7 @@
                <div class="row align-items-center">
                   <div class="col-12 col-xl-3">
                      <div class="footer_left">
-                        <a href="./index.html" class="logo"><img src="./assets/images/logon4.png" alt=""
-                           class="img-fluid"></a>
+                        <a href="">   <img src="./assets/images/logo1.png" alt="" class="img-fluid"></a>
                      </div>
                   </div>
                   <div class="col-12 col-xl-9">
