--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>VetoWay</title>
-      <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
+      <link rel="icon" href="./assets/images/fav_.png" type="image/x-icon">
       <link rel="stylesheet" href="./assets/css/bootstrap.css">
       <link rel="stylesheet" href="./assets/css/style.css">
       <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -176,7 +176,7 @@
       <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
-               <div class="col text-center mb-5">
+               <div class="col text-center mb-3">
                   <h2>Suositellut kohteet</h2>
                   <h3>Aasia</h3>
                </div>
@@ -222,10 +222,10 @@
             </div>
          </div>
       </div>
-      <div class="luxury_hotels section">
+      <div class="luxury_hotels section py-0">
          <div class="container">
             <div class="row">
-               <div class="col text-center mb-5">
+               <div class="col text-center mb-3">
                   <h3>Eurooppa</h3>
                </div>
             </div>
@@ -273,7 +273,7 @@
       <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
-               <div class="col text-center mb-5">
+               <div class="col text-center mb-3">
                   <h3>Amerikka</h3>
                </div>
             </div>
