--- a/america.html
+++ b/america.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Amerikka</title>
-      <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
+      <link rel="icon" href="./assets/images/fav_.png" type="image/x-icon">
       <link rel="stylesheet" href="./assets/css/bootstrap.css">
       <link rel="stylesheet" href="./assets/css/style.css">
       <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -177,7 +177,7 @@
             </div>
          </div>
       </div>
-      <div class="luxury_hotels section">
+      <div class="luxury_hotels section py-0">
          <div class="container">
             <div class="row">
                <div class="col text-center mb-5">
