--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>ota meihin yhteyttä</title>
-      <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
+      <link rel="icon" href="./assets/images/fav_.png" type="image/x-icon">
       <link rel="stylesheet" href="./assets/css/bootstrap.css">
       <link rel="stylesheet" href="./assets/css/style.css">
       <link rel="stylesheet" href="./assets/css/responsive.css">
@@ -49,7 +49,7 @@
       </header>
       <!-- banner -->
       <div id="banner" class="sub_banner home_page_banner">
-         <img src="./assets/images/canada_home_bg.webp" alt="sub_banner_img">
+         <img src="./assets/images/asia_bg1.jpg" alt="sub_banner_img">
          <div class="container">
             <div class="sub_banner_content text-center">
                <h1>ota meihin yhteyttä</h1>
