--- a/asia.html
+++ b/asia.html
@@ -197,7 +197,7 @@
 
 
 
-<div class="luxury_hotels section">
+<div class="luxury_hotels section py-0">
     <div class="container">
         <div class="row">
             <div class="col text-center mb-5">
