--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fi">
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -248,7 +248,7 @@
                      <h2 class="text-center mb-4">Lontoo</h2>
                      <div class="luxhotel_card">
                         <a href="europe.html" target="_blank">
-                        <img src="./assets/images/lantoo casino.jpg" alt="" class="img-fluid">
+                        <img src="./assets/images/lantoo_casino.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
                            <a href="europe.html" class="common_btn" target="_blank">Lue lisää</a>
@@ -359,7 +359,7 @@
                   <div class="col-12 col-xl-9">
                      <div class="footer_left footer_right_ul">
                         <ul>
-                           <li><a href="./index.html"class="active">home</a></li>
+                           <li><a href="./index.html" class="active">home</a></li>
                            <li><a href="./asia.html">aasia</a></li>
                            <li><a href="./europe.html">euroopassa</a></li>
                            <li><a href="./america.html">amerikka</a></li>
