--- a/asia.html
+++ b/asia.html
@@ -396,7 +396,7 @@
 <div class="accordian_bootstrp">
     <div class="container">
         <div class="accordion" id="accordionExample">
-            <h2 class="text-center mb-5">UKK (FAQ’S)</h2>
+            <h2 class="text-center mb-5">UKK</h2>
             <div class="accordion-item">
               <h3 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
