--- a/europe.html
+++ b/europe.html
@@ -284,7 +284,7 @@
                      <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
                         <a href="https://www.tripadvisor.in/Attraction_Review-g274707-d12224024-Reviews-Casino_Atrium_Hilton-Prague_Bohemia.html" target="_blank">
-                        <img src="./assets/images/kasino_atrium.jpeg" alt="" class="img-fluid">
+                        <img src="./assets/images/kasino_atrium.jpg" alt="" class="img-fluid">
                         </a>
                         <div class="text-center py-4">
                            <a href="https://www.tripadvisor.in/Attraction_Review-g274707-d12224024-Reviews-Casino_Atrium_Hilton-Prague_Bohemia.html" class="common_btn"  target="_blank">
