--- a/index.html
+++ b/index.html
@@ -25,14 +25,18 @@
       <!-- header -->
       <header>
          <nav class="nav container">
-            <input type="checkbox" id="nav-check">
+            <!-- <input type="checkbox" id="nav-check"> -->
             <div class="nav-header">
                <div class="nav-title">
                   <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
                      class="img-fluid"></a>
                </div>
             </div>
+            <div class="cross">
+               <i class="fa-solid fa-x"></i>
+            </div>
             <div class="nav-btn">
+              
                <label for="nav-check">
                <span></span>
                <span></span>
@@ -414,6 +418,7 @@
       <script src="https://code.jquery.com/jquery-3.7.1.min.js"
          integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
       <script src="./assets/js/bootstrap.bundle.js"></script>
+      <script src="assets/js/script.js"></script>
       <script>
          (function () {
              "use strict";
