--- a/privacy.html
+++ b/privacy.html
@@ -25,14 +25,18 @@
       <!-- header -->
       <header>
          <nav class="nav container">
-            <input type="checkbox" id="nav-check">
+            <!-- <input type="checkbox" id="nav-check"> -->
             <div class="nav-header">
                <div class="nav-title">
                   <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
                      class="img-fluid"></a>
                </div>
             </div>
+            <div class="cross">
+               <i class="fa-solid fa-x"></i>
+            </div>
             <div class="nav-btn">
+              
                <label for="nav-check">
                <span></span>
                <span></span>
@@ -40,7 +44,7 @@
                </label>
             </div>
             <ul class="nav-list">
-               <li><a href="./index.html">home</a></li>
+               <li><a href="./index.html" >home</a></li>
                <li><a href="./asia.html">aasia</a></li>
                <li><a href="./europe.html">euroopassa</a></li>
                <li><a href="./america.html">amerikka</a></li>
