--- a/asia.html
+++ b/asia.html
@@ -29,28 +29,32 @@
     <!-- header -->
     <header>
         <nav class="nav container">
-            <input type="checkbox" id="nav-check">
-            <div class="nav-header">
-                <div class="nav-title">
-                    <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
-                        class="img-fluid"></a>
-                </div>
-            </div>
-            <div class="nav-btn">
-                <label for="nav-check">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </label>
-            </div>
-            <ul class="nav-list">
-                <li><a href="./index.html">home</a></li>
-                <li><a href="./asia.html"   class="active">aasia</a></li>
-                <li><a href="./europe.html">euroopassa</a></li>
-                <li><a href="./america.html">amerikka</a></li>
-            </ul>
+           <!-- <input type="checkbox" id="nav-check"> -->
+           <div class="nav-header">
+              <div class="nav-title">
+                 <a href="./index.html" class="logo"><img src="./assets/images/logo1.png" alt=""
+                    class="img-fluid"></a>
+              </div>
+           </div>
+           <div class="cross">
+              <i class="fa-solid fa-x"></i>
+           </div>
+           <div class="nav-btn">
+             
+              <label for="nav-check">
+              <span></span>
+              <span></span>
+              <span></span>
+              </label>
+           </div>
+           <ul class="nav-list">
+              <li><a href="./index.html"  >home</a></li>
+              <li><a href="./asia.html" class="active">aasia</a></li>
+              <li><a href="./europe.html">euroopassa</a></li>
+              <li><a href="./america.html">amerikka</a></li>
+           </ul>
         </nav>
-    </header>
+     </header>
     <!-- banner -->
     <div id="banner" class="sub_banner home_page_banner">
         <img src="./assets/images/asia_bg1.jpg" alt="sub_banner_img">
