--- a/america.html
+++ b/america.html
@@ -95,7 +95,7 @@
             </div>
             <div class="luxury_hotels_inner_index">
                <div class="row justify-content-center">
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">The Venetian</h2>
                      <h6><b>Sijainti: </b>Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
@@ -121,7 +121,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Bellagio</h2>
                      <h6><b>Sijainti:</b> Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
@@ -147,7 +147,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Wynn</h2>
                      <h6><b>Sijainti:</b>Las Vegas Strip, Nevada, USA</h6>
                      <div class="luxhotel_card">
@@ -187,7 +187,7 @@
             </div>
             <div class="luxury_hotels_inner_index">
                <div class="row justify-content-center">
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Borgata Hotel Casino & Spa</h2>
                      <h6><b>Sijainti:</b> Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
@@ -212,7 +212,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Caesars</h2>
                      <h6><b>Sijainti: </b>Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
@@ -238,7 +238,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Hard Rock Hotel & Casino</h2>
                      <h6><b>Sijainti: </b>Atlantic City, New Jersey, USA</h6>
                      <div class="luxhotel_card">
@@ -279,7 +279,7 @@
             </div>
             <div class="luxury_hotels_inner_index">
                <div class="row justify-content-center">
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Dubai Palacen kasino</h2>
                      <h6><b>Sijainti: </b>Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
@@ -304,7 +304,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">PlayCity kasino</h2>
                      <h6><b></b>Sijainti: Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
@@ -329,7 +329,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Casino Palace Cancun</h2>
                      <h6><b>Sijainti: </b>Cancun, Meksiko</h6>
                      <div class="luxhotel_card">
