--- a/europe.html
+++ b/europe.html
@@ -99,7 +99,7 @@
             </div>
             <div class="luxury_hotels_inner_index">
                <div class="row justify-content-center">
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Monte Carlon kasino</h2>
                      <h6><b>Sijainti:</b> Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
@@ -126,7 +126,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Casino Café de Paris</h2>
                      <h6><b>Sijainti:</b>Sijainti: Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
@@ -151,7 +151,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Monte Carlo Bayn kasino</h2>
                      <h6><b>Sijainti: </b>Monte Carlo, Monaco</h6>
                      <div class="luxhotel_card">
@@ -190,7 +190,7 @@
             </div>
             <div class="luxury_hotels_inner_index">
                <div class="row justify-content-center">
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Hippodromen kasino</h2>
                      <h6><b>Paikka: </b>Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
@@ -216,7 +216,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Grosvenor Casino Victoria</h2>
                      <h6><b>Paikka: </b>Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
@@ -240,7 +240,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Empire Casino</h2>
                      <h6><b>Paikka:</b> Lontoo, Iso-Britannia</h6>
                      <div class="luxhotel_card">
@@ -279,7 +279,7 @@
             </div>
             <div class="luxury_hotels_inner_index">
                <div class="row justify-content-center">
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Kasino Atrium Hilton</h2>
                      <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
@@ -303,7 +303,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Kasinon lähettiläs</h2>
                      <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
@@ -327,7 +327,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-md-6 col-lg-4">
+                  <div class="col-md-6 col-xl-4">
                      <h2 class="text-center mb-4">Kasino Banco</h2>
                      <h6><b>Paikka: </b>Praha, Tšekki</h6>
                      <div class="luxhotel_card">
@@ -358,7 +358,7 @@
       <div class="accordian_bootstrp">
          <div class="container">
             <div class="accordion" id="accordionExample">
-               <h2 class="text-center mb-5">UKK(FAQ’S)</h2>
+               <h2 class="text-center mb-5">UKK</h2>
                <div class="accordion-item">
                   <h3 class="accordion-header" id="headingOne">
                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
