--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>ota meihin yhteyttä</title>
+      <title>Ota meihin yhteyttä</title>
       <link rel="icon" href="./assets/images/fav_.png" type="image/x-icon">
       <link rel="stylesheet" href="./assets/css/bootstrap.css">
       <link rel="stylesheet" href="./assets/css/style.css">
@@ -56,7 +56,7 @@
          <img src="./assets/images/asia_bg1.jpg" alt="sub_banner_img">
          <div class="container">
             <div class="sub_banner_content text-center">
-               <h1>ota meihin yhteyttä</h1>
+               <h1>Ota meihin yhteyttä</h1>
             </div>
          </div>
       </div>
@@ -65,15 +65,15 @@
             <div class="row align-items-center">
                <div class="col-lg-6">
                   <div class="left_side_first text-center">
-                     <h2 class="text-center">ota meihin yhteyttä
+                     <h2 class="text-center">Ota meihin yhteyttä
                      </h2>
-                     <a href="mailto:info@vetoway.com">sähköposti:info@vetoway.com</a>
+                     <a href="mailto:info@vetoway.com">Sähköposti:info@vetoway.com</a>
                   </div>
                </div>
                <div class="col-lg-6">
                   <div class="right_side_first">
                      <h2 class="mb-5 text-center">
-                        ota meihin yhteyttä
+                        Ota meihin yhteyttä
                      </h2>
                      <form action="#">
                         <div class="div mb-4">
