--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </header>
       <!-- banner -->
       <div id="banner" class="sub_banner home_page_banner page_home_banner">
-         <img src="./assets/images/Thevenetianbanner.jpeg" alt="sub_banner_img">
+         <img src="./assets/images/Home banner.jpg" alt="sub_banner_img">
          <div class="container">
             <div class="sub_banner_content text-center">
                <h1>VetoWay</h1>
