--- a/asia.html
+++ b/asia.html
@@ -57,7 +57,7 @@
      </header>
     <!-- banner -->
     <div id="banner" class="sub_banner home_page_banner">
-        <img src="./assets/images/asia_bg1.jpg" alt="sub_banner_img">
+        <img src="./assets/images/Asia banner.jpg" alt="sub_banner_img">
         <div class="container">
             <div class="sub_banner_content text-center">
                 <h1 class="mb-4">Aasia</h1>
