--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
       </header>
       <!-- banner -->
       <div id="banner" class="sub_banner home_page_banner">
-         <img src="./assets/images/asia_bg1.jpg" alt="sub_banner_img">
+         <img src="./assets/images/Contact banner.jpg" alt="sub_banner_img">
          <div class="container">
             <div class="sub_banner_content text-center">
                <h1>Ota meihin yhteyttä</h1>
