--- a/europe.html
+++ b/europe.html
@@ -49,7 +49,7 @@
       </header>
       <!-- banner -->
       <div id="banner" class="sub_banner home_page_banner">
-         <img src="./assets/images/home_bg_img.webp" alt="sub_banner_img">
+         <img src="./assets/images/Europe banner.jpg" alt="sub_banner_img">
          <div class="container">
             <div class="sub_banner_content text-center">
                <h1 class="mb-4">Euroopassa</h1>
