--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             </div>
          </div>
       </div>
-      <!-- <div class="cookie-alert show">
+      <div class="cookie-alert show">
          <div class="card-body">
             <div class="cookie-content">
                <h4>
@@ -414,7 +414,7 @@
                <a href="#" class="accept-cookies common_btn">olen samaa mieltä</a>
             </div>
          </div>
-         </div> -->
+         </div>
       <script src="https://code.jquery.com/jquery-3.7.1.min.js"
          integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
       <script src="./assets/js/bootstrap.bundle.js"></script>
