--- a/index.html
+++ b/index.html
@@ -56,15 +56,48 @@
          <img src="./assets/images/Home banner.jpg" alt="sub_banner_img">
          <div class="container">
             <div class="sub_banner_content text-center">
-               <h1>VetoWay</h1>
+               <h1>Maailman parhaat Kasinot hotellit</h1>
             </div>
          </div>
       </div>
+
+
+      <div class="after_banner_section section">
+         <div class="container">
+            <div class="row align-items-center">
+               <div class="col-lg-6">
+                  <div class="left_side_ab">
+                     <!-- <h3>Suunnittele Ultimate Casino Resort Getaway</h3> -->
+                     <p>Löydä maailman parhaat rahapelikeskukset Vetoway Casino Hotels -arvostelusivustolla, josta löydät
+                        tietoa loistosta, jännityksestä ja vertaansa vailla olevasta ylellisyydestä. Perusteelliset arviomme
+                        ohjaavat sinut kohti parhaita ylellisiä pelikokemuksia, olitpa sitten kasinon lattian kiirettä etsivä
+                        huipulle tai älykäs turisti, joka etsii ylellistä majoitusta ja huippuluokan viihdettä
+                     </p>
+                     <p>Vetoway.com korostaa tunnetuimpia pelipaikkoja kaikkialla maailmassa Las Vegas Stripin kirkkaista
+                        valoista Macaon ylellisiin rantoihin ja muuallekin. Raporttimme tarjoavat vertaansa vailla olevan
+                        katsauksen huippupelaamisen maailmaan, halusitpa sitten kokea Singaporen integroitujen
+                        lomakeskusten huippuluokan innovaatiot tai Monte Carlon kuuluisien kasinoiden klassisen eleganssin.
+                        Jos sinulla on kysyttävää arvosteluistamme, ota rohkeasti yhteyttä, autamme sinua mielellämme.
+                        </p>
+                  </div>
+               </div>
+               <div class="col-lg-6">
+                  <div class="right_side_ab">
+                     <img src="./assets/images/manila_hotels.jpg" alt="" class="img-fluid">
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+    
+
+
+
       <div class="luxury_hotels section">
          <div class="container">
             <div class="row">
                <div class="col text-center mb-5">
-                  <h2>VetoWay</h2>
+                  <h2>Maailman parhaat Kasinot hotellit</h2>
                   <p>Tutustu maailmanluokan kasinokeskuksiin eri mantereilla</p>
                </div>
             </div>
@@ -163,7 +196,7 @@
                         unelmiesi kasinoloman suunnittelu jo tänään! Tutustu parhaiden kasinohotellien
                         kuratoituun valikoimaamme, löydä eksklusiivisia tarjouksia ja paketteja ja lähde
                         matkalle, joka on täynnä jännitystä ja hemmottelua. Olitpa kokenut uhkapeluri,
-                        vapaa-ajan matkailija tai ylellistä pakopaikkaa etsivä, [Website Name] on porttisi
+                        vapaa-ajan matkailija tai ylellistä pakopaikkaa etsivä, <a href="vetoway.com">vetoway.com</a> on porttisi
                         maailman johtaviin kasinokeskuksiin.
                      </p>
                   </div>
